# Inseye-Remote-Connector-Lib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  endianess_helpers.hpp  errors.cpp  errors.hpp  exceptions.hpp  eye_tracker_data_struct.hpp  finally.hpp  lib_export.h  named_pipe_communicator.cpp  named_pipe_communicator.hpp  remote_connector.cpp  remote_connector.h  remote_connector.hpp  shared_memory_header.cpp  shared_memory_header.hpp  version.cpp  version.hpp
sample/: CMakeLists.txt  main.cpp
sample_c/: CMakeLists.txt  main.c
sample_cpp/: CMakeLists.txt  main.cpp
